# minimeta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  minimeta.cpp
example/: CMakeLists.txt  Components.generated.hpp  Components.h  Examples.generated.hpp  Examples.generated.hxx  Examples.h  Generated.hpp  Minimeta.h  Minimeta.hpp  Readme.md  main.cpp
example/scripts/: generate.bat
example/src/: CMakeLists.txt  Components.h  Examples.generated.hpp  Examples.h  main.cpp
libtooling/: minimeta.cpp
minimeta/: CMakeLists.txt
minimeta/example/: CMakeLists.txt  Components.generated.hpp  Components.h  main.cpp
minimeta/example/components/: CMakeLists.txt  Components.generated.hpp  Components.h  Examples.generated.hpp  main.cpp
minimeta/example/static_polimorphism/: CMakeLists.txt  main.cpp  main.generated.hpp
minimeta/include/mmeta/: annotations.h  minimeta.hpp
minimeta/scripts/: generate.bat  generate_components.bat  generate_spm.bat
